Initialize project with Ruby on Rails and essential gem dependencies.

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-# Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
+# Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main" working on this branch 
 gem "rails", "~> 8.1.1"
 # Use sqlite3 as the database for Active Record
 gem "sqlite3", ">= 2.1"
