--- a/backend/config/storage.yml
+++ b/backend/config/storage.yml
@@ -15,11 +15,11 @@ local:
 #   bucket: your_own_bucket-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket-<%= Rails.env %>
+google:
+  service: GCS
+  # project: your_project # Not needed if running on GCE/Cloud Run with implicit auth
+  # credentials: <%= Rails.root.join("path/to/gcs.keyfile") %> # Not needed if running on GCE/Cloud Run with implicit auth
+  bucket: <%= ENV.fetch("GOOGLE_STORAGE_BUCKET") %>
 
 # mirror:
 #   service: Mirror
