added support for sentry

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -55,3 +55,7 @@ group :development, :test do
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
 end
+
+# Error tracking
+gem "sentry-ruby"
+gem "sentry-rails"
