working on backend email handleing

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -56,6 +56,14 @@ group :development, :test do
   gem "rubocop-rails-omakase", require: false
 end
 
+group :development, :test do
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem "faker"
+end
+
+gem "resend"
+
 # Error tracking
 gem "sentry-ruby"
 gem "sentry-rails"
